--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,11 +44,11 @@ header {
     align-items: center;
 }
 
-.item > .inner h2 {
+.item>.inner h2 {
     margin-bottom: unset;
 }
 
-.item > .inner p {
+.item>.inner p {
     margin-top: 5px;
 }
 
@@ -94,7 +94,7 @@ input[type=date] {
     font-family: Raleway;
     border-radius: 16px;
     padding: 12px 24px;
-    border:2px solid #5F30E2;
+    border: 2px solid #5F30E2;
     color: black;
     font-size: 24px;
     margin-top: auto;
@@ -102,14 +102,14 @@ input[type=date] {
     cursor: pointer;
 }
 
-.btn-submit:hover{
+.btn-submit:hover {
     background: #5F30E2;
     color: white;
 }
 
 input[type=text],
 input[type=date],
-.btn-submit:focus{
+.btn-submit:focus {
     outline: none;
 }
 
@@ -123,7 +123,7 @@ input[type=date],
 }
 
 .check-button {
-    background: url('../assets/check-outline.svg');
+    background: url('../svg/check-outline.svg');
     background-size: contain;
     width: 40px;
     height: 40px;
@@ -133,12 +133,12 @@ input[type=date],
 }
 
 .check-button:hover {
-    background: url('../assets/check-solid.svg');
+    background: url('../svg/check-solid.svg');
     background-size: contain;
 }
 
-.trash-button{
-    background: url('../assets/trash-outline.svg');
+.trash-button {
+    background: url('../svg/trash-outline.svg');
     background-size: contain;
     width: 40px;
     height: 40px;
@@ -148,12 +148,12 @@ input[type=date],
 }
 
 .trash-button:hover {
-    background: url('../assets/trash-fill.svg');
+    background: url('../svg/trash-fill.svg');
     background-size: contain;
 }
 
-.undo-button{
-    background: url('../assets/undo-ouline.svg');
+.undo-button {
+    background: url('../svg/undo-ouline.svg');
     background-size: contain;
     width: 40px;
     height: 40px;
@@ -163,11 +163,12 @@ input[type=date],
 }
 
 .undo-button:hover {
-    background: url('../assets/undo-ouline.svg');
+    background: url('../svg/undo-ouline.svg');
     background-size: contain;
 }
 
-.check-button:focus, .trash-button {
+.check-button:focus,
+.trash-button {
     outline: none;
 }
 
